--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-06-26 16:01:17--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
-      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.60.209\n",
-      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.60.209|:443... connected.\n",
+      "--2019-06-30 11:05:11--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
+      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.12.209\n",
+      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.12.209|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 825943 (807K) [application/java-archive]\n",
-      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar’\n",
+      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar.1’\n",
       "\n",
-      "postgresql-42.2.5.j 100%[===================>] 806.58K  3.96MB/s    in 0.2s    \n",
+      "postgresql-42.2.5.j 100%[===================>] 806.58K   227KB/s    in 3.6s    \n",
       "\n",
-      "2019-06-26 16:01:18 (3.96 MB/s) - ‘/home/jovyan/postgresql-42.2.5.jar’ saved [825943/825943]\n",
+      "2019-06-30 11:05:15 (227 KB/s) - ‘/home/jovyan/postgresql-42.2.5.jar.1’ saved [825943/825943]\n",
       "\n"
      ]
     }
@@ -43,9 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Application started\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['PYSPARK_SUBMIT_ARGS'] = '--driver-class-path /home/jovyan/postgresql-42.2.5.jar --jars /home/jovyan/postgresql-42.2.5.jar pyspark-shell'\n",
@@ -55,7 +63,9 @@
     "spark = pyspark.sql.SparkSession.builder \\\n",
     "        .master(\"local[1]\") \\\n",
     "        .appName(\"snapshot\") \\\n",
-    "        .getOrCreate()"
+    "        .getOrCreate()\n",
+    "\n",
+    "print(\"Application started\")"
    ]
   },
   {
@@ -67,22 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "499500"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spark application is ready for work\n"
+     ]
     }
    ],
    "source": [
-    "spark.sparkContext.range(1000).sum()"
+    "spark.sparkContext.range(1000).sum()\n",
+    "print(\"Spark application is ready for work\")"
    ]
   },
   {
@@ -94,33 +102,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Customers table\n",
       "+----+----------+---------+--------------------+\n",
       "|  id|first_name|last_name|               email|\n",
       "+----+----------+---------+--------------------+\n",
-      "|1004|      Anne|Kretchmar| toddevans@yahoo.com|\n",
-      "|1009|    Amanda|   Hardin|crystal60@larsen-...|\n",
-      "|1002|    George|   Bailey| iterrell@boyer.info|\n",
-      "|1010|      Tina| Valencia| fjordan@hotmail.com|\n",
-      "|1011|    Carlos|    Poole|kingjoshua@huerta...|\n",
-      "|1007|     David| Cisneros|hendersonchristop...|\n",
-      "|1003|    Edward|   Walker|xwhitehead@hotmai...|\n",
-      "|1013|    Amanda|    Evans|azimmerman@gmail.com|\n",
-      "|1015|   Richard|     Hale|sparrish@wallace.com|\n",
-      "|1016|   Michael|   Larson|lindsey64@hotmail...|\n",
-      "|1017|   Patrick| Williams|   zlawson@jones.com|\n",
-      "|1014|   Phillip|     Rice|nrodriguez@love-k...|\n",
-      "|1018|    Robert|    Watts|debbielowe@hotmai...|\n",
-      "|1020|  Nicholas| Hamilton|jessicahodge@cook...|\n",
-      "|1001|     Sally|   Thomas| umarshall@yahoo.com|\n",
-      "|1021|    Lauren| Harrison|    nlewis@yahoo.com|\n",
+      "|1734|   William|  Hensley|   rwebb@hotmail.com|\n",
+      "|1415|   Allison|     Hall|      dcook@long.com|\n",
+      "|1170|  Danielle|      Ali|   pknox@hotmail.com|\n",
+      "|1171|     Tanya|   Palmer|annettebolton@gma...|\n",
+      "|1172|     Randy|    James|stephensonchristi...|\n",
       "+----+----------+---------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "Orders table\n",
+      "+-----+----------+---------+--------+----------+\n",
+      "|   id|order_date|purchaser|quantity|product_id|\n",
+      "+-----+----------+---------+--------+----------+\n",
+      "|10001|2016-01-16|     1001|       1|       102|\n",
+      "|10002|2016-01-17|     1002|       2|       105|\n",
+      "|10003|2016-02-19|     1002|       2|       106|\n",
+      "|10004|2016-02-21|     1003|       1|       107|\n",
+      "+-----+----------+---------+--------+----------+\n",
+      "\n",
+      "Products table\n",
+      "+---+------------------+--------------------+------+\n",
+      "| id|              name|         description|weight|\n",
+      "+---+------------------+--------------------+------+\n",
+      "|101|           scooter|Small 2-wheel sco...|  3.14|\n",
+      "|102|       car battery|     12V car battery|   8.1|\n",
+      "|103|12-pack drill bits|12-pack of drill ...|   0.8|\n",
+      "|104|            hammer|12oz carpenter's ...|  0.75|\n",
+      "|105|            hammer|14oz carpenter's ...| 0.875|\n",
+      "+---+------------------+--------------------+------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -132,40 +153,74 @@
     "        dbtable='customers'\n",
     "    ).load()\n",
     "\n",
-    "customers.show()"
+    "products = spark.read.format('jdbc').options(\n",
+    "        url = \"jdbc:postgresql://postgres:5432/postgres?user=postgres&password=postgres&currentSchema=inventory\",\n",
+    "        database='postgres',\n",
+    "        dbtable='products'\n",
+    "    ).load()\n",
+    "\n",
+    "orders = spark.read.format('jdbc').options(\n",
+    "        url = \"jdbc:postgresql://postgres:5432/postgres?user=postgres&password=postgres&currentSchema=inventory\",\n",
+    "        database='postgres',\n",
+    "        dbtable='orders'\n",
+    "    ).load()\n",
+    "\n",
+    "customers.registerTempTable(\"customers\")\n",
+    "products.registerTempTable(\"products\")\n",
+    "orders.registerTempTable(\"orders\")\n",
+    "\n",
+    "print(\"Customers table\")\n",
+    "customers.show(5)\n",
+    "print(\"Orders table\")\n",
+    "orders.show(5)\n",
+    "print(\"Products table\")\n",
+    "products.show(5)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write snapshot to Data Lake"
+    "# Read and join the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers.write.format(\"parquet\").save(\"/home/jovyan/customers_data\")"
+    "# please write your query here\n",
+    "query = \"\"\n",
+    "result = spark.sql(query)\n",
+    "result.write.format(\"parquet\").save(\"/home/jovyan/weight_report\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+------------+\n",
+      "|  id|first_name|last_name|total_weight|\n",
+      "+----+----------+---------+------------+\n",
+      "|1002|    George|   Bailey|       1.875|\n",
+      "|1003|    Edward|   Walker|         5.3|\n",
+      "|1001|     Sally|   Thomas|         8.1|\n",
+      "|1004|      Anne|Kretchmar|        null|\n",
+      "+----+----------+---------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "spark.stop()"
+    "spark.read \\\n",
+    "    .format(\"parquet\").load(\"/home/jovyan/weight_report\").show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
