--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-06-30 11:05:11--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
-      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.12.209\n",
-      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.12.209|:443... connected.\n",
+      "--2019-07-06 09:21:40--  https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar\n",
+      "Resolving repo1.maven.org (repo1.maven.org)... 151.101.244.209\n",
+      "Connecting to repo1.maven.org (repo1.maven.org)|151.101.244.209|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 825943 (807K) [application/java-archive]\n",
-      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar.1’\n",
+      "Saving to: ‘/home/jovyan/postgresql-42.2.5.jar’\n",
       "\n",
-      "postgresql-42.2.5.j 100%[===================>] 806.58K   227KB/s    in 3.6s    \n",
+      "postgresql-42.2.5.j 100%[===================>] 806.58K   207KB/s    in 4.0s    \n",
       "\n",
-      "2019-06-30 11:05:15 (227 KB/s) - ‘/home/jovyan/postgresql-42.2.5.jar.1’ saved [825943/825943]\n",
+      "2019-07-06 09:21:45 (203 KB/s) - ‘/home/jovyan/postgresql-42.2.5.jar’ saved [825943/825943]\n",
       "\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +113,11 @@
       "+----+----------+---------+--------------------+\n",
       "|  id|first_name|last_name|               email|\n",
       "+----+----------+---------+--------------------+\n",
-      "|1734|   William|  Hensley|   rwebb@hotmail.com|\n",
-      "|1415|   Allison|     Hall|      dcook@long.com|\n",
-      "|1170|  Danielle|      Ali|   pknox@hotmail.com|\n",
-      "|1171|     Tanya|   Palmer|annettebolton@gma...|\n",
-      "|1172|     Randy|    James|stephensonchristi...|\n",
+      "|1001|     Sally|   Thomas|sally.thomas@acme...|\n",
+      "|1002|    George|   Bailey|  gbailey@foobar.com|\n",
+      "|1003|    Edward|   Walker|       ed@walker.com|\n",
+      "|1004|      Anne|Kretchmar|  annek@noanswer.org|\n",
       "+----+----------+---------+--------------------+\n",
-      "only showing top 5 rows\n",
       "\n",
       "Orders table\n",
       "+-----+----------+---------+--------+----------+\n",
@@ -186,33 +184,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# please write your query here\n",
-    "query = \"\"\n",
-    "result = spark.sql(query)\n",
-    "result.write.format(\"parquet\").save(\"/home/jovyan/weight_report\")"
+    "from pyspark.sql.functions import current_timestamp\n",
+    "query = \\\n",
+    "\"select a.id, a.first_name, a.last_name, coalesce(sum(c.weight),0) total_weight\\\n",
+    "   from customers a \\\n",
+    "        left join orders b on a.id=b.purchaser \\\n",
+    "        left join products c on b.product_id=c.id \\\n",
+    "   where a.id<=1005 \\\n",
+    "   group by a.id, a.first_name, a.last_name\"\n",
+    "result = spark.sql(query) \\\n",
+    ".withColumn('load_dttm',current_timestamp())\n",
+    "\n",
+    "result.write.format(\"parquet\").mode(\"overwrite\").save(\"/home/jovyan/weight_report\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+----------+---------+------------+\n",
-      "|  id|first_name|last_name|total_weight|\n",
-      "+----+----------+---------+------------+\n",
-      "|1002|    George|   Bailey|       1.875|\n",
-      "|1003|    Edward|   Walker|         5.3|\n",
-      "|1001|     Sally|   Thomas|         8.1|\n",
-      "|1004|      Anne|Kretchmar|        null|\n",
-      "+----+----------+---------+------------+\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|  id|first_name|last_name|total_weight|           load_dttm|\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|1004|      Anne|Kretchmar|         0.0|2019-07-06 10:06:...|\n",
+      "|1002|    George|   Bailey|       1.875|2019-07-06 10:06:...|\n",
+      "|1003|    Edward|   Walker|         5.3|2019-07-06 10:06:...|\n",
+      "|1001|     Sally|   Thomas|         8.1|2019-07-06 10:06:...|\n",
+      "+----+----------+---------+------------+--------------------+\n",
       "\n"
      ]
     }
@@ -221,6 +227,33 @@
     "spark.read \\\n",
     "    .format(\"parquet\").load(\"/home/jovyan/weight_report\").show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method SparkSession.stop of <pyspark.sql.session.SparkSession object at 0x7fc76417c4a8>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -239,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
